# retro-arcade-collection

./: Cargo.toml
assets/sprites/asteroid/: space_shooter_sheet.xml
src/: common.rs  constants.rs  debug_plugin.rs  main.rs  rendering_plugin.rs  texture_atlas_loader.rs
src/scenes/: mod.rs
src/scenes/asteroid/: asteroid_scene_plugin.rs  components.rs  constants.rs  event_handlers.rs  events.rs  game_logic.rs  input.rs  mod.rs  rendering.rs  resources.rs  utils.rs
src/scenes/breakout/: breakout_scene_plugin.rs  components.rs  constants.rs  event_handlers.rs  events.rs  input.rs  logic.rs  mod.rs  rendering.rs  resources.rs
src/scenes/menu/: components.rs  menu_scene_plugin.rs  mod.rs  plugin.rs
