[package]
name = "retro-arcade-collection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
rand = "0.8.5"
serde = { version = "1.0.160", features = ["derive"] }
quick-xml = { version= "0.28.1", features = ["serialize"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
